# lacuna-cli

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: main.cpp
src/core/: compressor.hpp  huffman.cpp  huffman.hpp  rle.cpp  rle.hpp
src/utils/: benchmark.cpp  benchmark.hpp  file_io.cpp  file_io.hpp
tests/: integration_test.sh
